2006-09-19  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/4520
	Backport from mainline
	* cselib.c (cselib_hash_rtx): Avoid hashing on the address of labels
	and symbols.  Instead use the implementation from cse.c's hash_rtx.

2006-09-18 Uros Bizjak <uros@kss-loka.si>

	PR target/28946
	* config/i386/i386.md ("*ashldi3_cconly_rex64", "*ashlsi3_cconly",
	"*ashlhi3_cconly", "*ashlqi3_cconly", "*ashrdi3_one_bit_cconly_rex64",
	"*ashrdi3_cconly_rex64", "*ashrsi3_one_bit_cconly", "*ashrsi3_cconly",
	"*ashrhi3_one_bit_cconly", "*ashrhi3_cconly",
	"*ashrqi3_one_bit_cconly", "*ashrqi3_cconly",
	"*lshrdi3_cconly_one_bit_rex64", "*lshrdi3_cconly_rex64",
	"*lshrsi3_one_bit_cconly", "*lshrsi3_cconly",
	"*lshrhi3_one_bit_cconly", "*lshrhi3_cconly",
	"*lshrqi2_one_bit_cconly", "*lshrqi2_cconly": New patterns to
	implement only CC setting effects of shift instructions.

2006-09-11  Hideki Iwamoto  <h-iwamoto@kit.hi-ho.ne.jp>

	* doc/cpp.texi: Fix names of charset options.

2006-09-10  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR rtl-optimization/28636
	* combine.c (force_to_mode): Test for side-effects before
	substituting by zero.
	(simplify_shift_const): Likewise for zero or other constants.

2006-09-10  Richard Sandiford  <richard@codesourcery.com>

	PR target/29006
	* config/mips/mips-protos.h (mips_mem_fits_mode_p): Declare.
	* config/mips/mips.c (mips_expand_unaligned_store): Use the mode
	returned by mode_for_size, rather than the mode of src itself,
	to choose between 32-bit and 64-bit patterns.
	(mips_mem_fits_mode_p): New function.
	* config/mips/mips.md (mov_<load>l, mov_<load>r): Use it to check
	that the size of the source matches the size of the destination.
	(mov_<store>l, mov_<store>r): Likewise.

2006-09-06  Matthias Klose  <doko@debian.org>

	* Makefile.in (s-macro_list): Conform to POSIX rules in single quoted
	strings.

2006-08-25  Fariborz Jahanian  <fjahanian@apple.com>

	PR c/28418
	* c-gimplify.c (gimplify_compound_literal_expr): Don't add