@@ -1,3 +1,8 @@
+2006-09-21  Steven Bosscher  <steven@gcc.gnu.org>
+
+	PR middle-end/26983
+	* gcc.dg/pr26983.c: New test.
+
 2006-09-18  Uros Bizjak  <uros@kss-loka.si>
 
 	PR target/28946
