@@ -1,3 +1,10 @@
+2006-09-21  Steven Bosscher  <steven@gcc.gnu.org>
+
+	PR middle-end/26983
+	Backport from mainline
+	* builtins.c (expand_builtin_setjmp): Force next_lab to be
+	preserved.
+
 2006-09-19  Roger Sayle  <roger@eyesopen.com>
 
 	PR middle-end/4520
